--- a/elasticsearch/opentelemetry-lab/app-nodejs/package.json
+++ b/elasticsearch/opentelemetry-lab/app-nodejs/package.json
@@ -1,14 +1,17 @@
 {
   "name": "otel-node-app",
   "version": "1.0.0",
+  "description": "Aplicação exemplo com OpenTelemetry e Elastic APM",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "@opentelemetry/sdk-node": "^1.20.0",
-    "@opentelemetry/auto-instrumentations-node": "^1.20.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^1.20.0",
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/sdk-node": "^0.50.0",
+    "@opentelemetry/resources": "^1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "^1.18.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.50.0",
     "express": "^4.18.2"
   }
 }
