--- a/elasticsearch/opentelemetry-lab/docker/kibana.yml
+++ b/elasticsearch/opentelemetry-lab/docker/kibana.yml
@@ -1,2 +1,6 @@
-# configuração do Kibana com xpack.security
-Conteúdo simulado para kibana.yml
+server.name: kibana
+server.host: "0.0.0.0"
+elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+elasticsearch.username: "elastic"
+elasticsearch.password: "changeme"
+xpack.security.enabled: true
