--- a/elasticsearch/opentelemetry-lab/app/Dockerfile
+++ b/elasticsearch/opentelemetry-lab/app/Dockerfile
@@ -1,2 +1,12 @@
-# Dockerfile corrigido da aplicação
-Conteúdo simulado para Dockerfile
+FROM node:18
+
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0
+
+WORKDIR /usr/src/app
+COPY . .
+
+RUN npm config set strict-ssl false && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm install
+
+CMD ["node", "app.js"]
