--- a/elasticsearch/opentelemetry-lab/app/package.json
+++ b/elasticsearch/opentelemetry-lab/app/package.json
@@ -1,2 +1,14 @@
-# package.json para app Node.js
-Conteúdo simulado para package.json
+{
+  "name": "otel-node-app",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "@opentelemetry/sdk-node": "^1.20.0",
+    "@opentelemetry/auto-instrumentations-node": "^1.20.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^1.20.0",
+    "express": "^4.18.2"
+  }
+}
