--- a/elasticsearch/opentelemetry-lab/app/package.json
+++ b/elasticsearch/opentelemetry-lab/app/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "otel-node-app",
+  "name": "otel-app",
   "version": "1.0.0",
+  "description": "Aplicação demo com OpenTelemetry",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "@opentelemetry/sdk-node": "^1.20.0",
-    "@opentelemetry/auto-instrumentations-node": "^1.20.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^1.20.0",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/sdk-node": "^0.45.0",
+    "@opentelemetry/auto-instrumentations-node": "^1.18.0",
     "express": "^4.18.2"
   }
 }
