--- a/elasticsearch/opentelemetry-lab/app/package.json
+++ b/elasticsearch/opentelemetry-lab/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "otel-app",
   "version": "1.0.0",
-  "description": "Aplicação demo com OpenTelemetry sem auto-instrumentation",
+  "description": "Aplicação demo com OpenTelemetry usando auto-instrumentation",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -9,8 +9,8 @@
   "dependencies": {
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/sdk-node": "^0.45.0",
-    "@opentelemetry/instrumentation-http": "^0.45.0",
-    "@opentelemetry/instrumentation-express": "^0.45.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.45.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.45.0",
     "express": "^4.18.2"
   }
 }
