--- a/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
+++ b/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
@@ -32,4 +30,13 @@ services:
     container_name: otel-app
     environment:
       - OTEL_SERVICE_NAME=meu-app-node
-      - OTEL_EXPORT_
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
+    depends_on:
+      - elasticsearch
+      - kibana
+    ports:
+      - "3000:3000"
+
+volumes:
+  esdata:
