--- a/elasticsearch/opentelemetry-lab/app/package.json
+++ b/elasticsearch/opentelemetry-lab/app/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "otel-node-app",
+  "name": "otel-app",
   "version": "1.0.0",
+  "description": "Aplicação demo com OpenTelemetry com auto-instrumentation",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "@opentelemetry/sdk-node": "^1.20.0",
-    "@opentelemetry/auto-instrumentations-node": "^1.20.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^1.20.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/sdk-node": "^0.45.0",
+    "@opentelemetry/instrumentation-http": "^0.45.0",
+    "@opentelemetry/instrumentation-express": "^0.45.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.43.0"
   }
 }
