--- a/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
+++ b/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
@@ -1,6 +1,8 @@
+version: "3.8"
+
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
@@ -12,7 +14,7 @@ services:
       - esdata:/usr/share/elasticsearch/data
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.13.0
+    image: docker.elastic.co/kibana/kibana:7.17.13
     container_name: kibana
     ports:
       - "5601:5601"
@@ -20,18 +22,17 @@ services:
       - elasticsearch
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    volumes:
-      - ./kibana-config/kibana.yml:/usr/share/kibana/kibana.yml
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=changeme
 
   app:
     build:
-      context: ../app
+      context: ./app
       dockerfile: Dockerfile
     container_name: otel-app
     environment:
       - OTEL_SERVICE_NAME=meu-app-node
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
-      - NODE_TLS_REJECT_UNAUTHORIZED=0
     depends_on:
       - elasticsearch
       - kibana
