--- a/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
+++ b/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=changeme
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
 
   app:
     build:
