--- a/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
+++ b/elasticsearch/opentelemetry-lab/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - NODE_TLS_REJECT_UNAUTHORIZED=0
 
 
-apm-server:
+  apm-server:
     image: docker.elastic.co/apm/apm-server:7.17.13
     container_name: apm-server
     depends_on:
@@ -57,13 +57,11 @@ apm-server:
     container_name: otel-app
     depends_on:
       - apm-server
-      - elasticsearch
-      - kibana
     ports:
       - "3000:3000"
     environment:
       - OTEL_SERVICE_NAME=meu-app-node
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:8200
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://apm-server:8200
       - NODE_TLS_REJECT_UNAUTHORIZED=0
 
 volumes:
