--- a/elasticsearch/opentelemetry-lab/docker/elasticsearch.yml
+++ b/elasticsearch/opentelemetry-lab/docker/elasticsearch.yml
@@ -2,3 +2,4 @@ cluster.name: "es-datastackpro"
 network.host: 0.0.0.0
 xpack.security.enabled: true
 xpack.security.transport.ssl.enabled: true
+xpack.security.authc.api_key.enabled: true
