--- a/elasticsearch/observabilidade-finops/docker-compose.yml
+++ b/elasticsearch/observabilidade-finops/docker-compose.yml
@@ -21,8 +21,7 @@ services:
       - 5601:5601
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=changeme
+      - ELASTICSEARCH_SERVICE_ACCOUNT_TOKEN=AAEAAWVsYXN0aWMva2liYW5hL2tpYmFuYS10b2tlbjpQWmx5WHA1cFM2MmtLMFJteU9ab1dn # use o token aqui
     depends_on:
       - elasticsearch
 
