--- a/elasticsearch/observabilidade-finops/docker-compose.yml
+++ b/elasticsearch/observabilidade-finops/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=true
-      - ELASTIC_PASSWORD=changeme
+      - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=false
       - xpack.security.transport.ssl.enabled=false
     ports:
@@ -22,7 +21,6 @@ services:
       - 5601:5601
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_SERVICE_ACCOUNT_TOKEN=AAEAAWVsYXN0aWMva2liYW5hL2tpYmFuYS10b2tlbjpQWmx5WHA1cFM2MmtLMFJteU9ab1dn
     depends_on:
       - elasticsearch
 
