--- a/elasticsearch/observabilidade-finops/docker-compose.yml
+++ b/elasticsearch/observabilidade-finops/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     container_name: kibana
     ports:
       - 5601:5601
+    volumes:
+      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
