--- a/elasticsearch/observabilidade-finops/docker-compose.yml
+++ b/elasticsearch/observabilidade-finops/docker-compose.yml
@@ -1,30 +1,31 @@
-version: '3.8'
+version: '3.7'
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.17
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
-      - xpack.security.http.ssl.enabled=false
-      - xpack.security.transport.ssl.enabled=false
+      - network.host=0.0.0.0
+      - http.host=0.0.0.0
     ports:
-      - 9200:9200
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - "9200:9200"
+    networks:
+      - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.13.4
+    image: docker.elastic.co/kibana/kibana:7.17.17
     container_name: kibana
-    ports:
-      - 5601:5601
-    volumes:
-      - ./kibana.yml:/usr/share/kibana/kibana.yml
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    networks:
+      - elastic
     depends_on:
       - elasticsearch
 
-volumes:
-  esdata:
+networks:
+  elastic:
+    driver: bridge
