Ajustando falha de certificado

--- a/elasticsearch/open-observability-unified/predictor/Dockerfile
+++ b/elasticsearch/open-observability-unified/predictor/Dockerfile
@@ -4,7 +4,14 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-RUN pip install --no-cache-dir flask==3.0.3 prometheus-client==0.20.0 requests==2.32.3 numpy==2.0.1
+# Instala dependências Python ignorando verificação SSL para hosts do PyPI
+RUN pip install --no-cache-dir \
+    --trusted-host pypi.org \
+    --trusted-host files.pythonhosted.org \
+    flask==3.0.3 \
+    prometheus-client==0.20.0 \
+    requests==2.32.3 \
+    numpy==2.0.1
 
 COPY app.py /app/app.py
 
