--- a/elasticsearch/open-observability-unified/sampleapp/Dockerfile
+++ b/elasticsearch/open-observability-unified/sampleapp/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine
 
 WORKDIR /app
 COPY package.json package-lock.json ./
-RUN npm ci --omit=dev
+RUN npm config set strict-ssl false && npm ci --omit=dev
 COPY . .
 
 ENV APP_PORT=3000
