--- a/elasticsearch/open-observability-unified/docker-compose.yml
+++ b/elasticsearch/open-observability-unified/docker-compose.yml
@@ -115,7 +115,6 @@ services:
     networks:
       - obs-net
 
-  # init para corrigir permissões do volume do Tempo
   tempo-init:
     image: busybox:1.36
     container_name: tempo-init
@@ -130,9 +129,9 @@ services:
     container_name: tempo
     command: ["-config.file=/etc/tempo/config.yaml"]
     ports:
-      - "3200:3200"   # http
-      - "4317:4317"   # otlp grpc
-      - "4318:4318"   # otlp http
+      - "3200:3200"
+      - "4317:4317"
+      - "4318:4318"
     volumes:
       - ./tempo/config.yaml:/etc/tempo/config.yaml:ro
       - tempo-data:/tmp/tempo
@@ -145,9 +144,8 @@ services:
     image: otel/opentelemetry-collector-contrib:0.104.0
     container_name: otel-collector
     command: ["--config=/etc/otelcol/config.yaml"]
-    # Exponho só 8888; 4317/4318 ficam internas, evitando conflito com Tempo
     ports:
-      - "8888:8888"
+      - "8888:8888"   # expõe só métricas
     volumes:
       - ./otel-collector/config.yaml:/etc/otelcol/config.yaml:ro
     depends_on:
@@ -198,11 +196,9 @@ services:
       - obs-net
 
   loadgen:
-    image: curlimages/curl:8.7.1
+    build:
+      context: ./loadgen
     container_name: loadgen
-    command: ["sh", "-c", "chmod +x /scripts/load.sh && sed -i 's/\\r$//' /scripts/load.sh && /scripts/load.sh"]
-    volumes:
-      - ./scripts/load.sh:/scripts/load.sh:ro
     environment:
       - SLEEP_SECONDS=1
     depends_on:
