--- a/elasticsearch/open-observability-unified/sampleapp/Dockerfile
+++ b/elasticsearch/open-observability-unified/sampleapp/Dockerfile
@@ -2,16 +2,20 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copia apenas o package.json (sem o lock para evitar conflitos)
+# instala deps sem lock para evitar conflitos
 COPY package.json ./
-
-# Configura npm para ignorar SSL, usar registry oficial e instalar dependências sem travar em conflitos de peer
 RUN npm config set strict-ssl false \
  && npm config set registry https://registry.npmjs.org \
  && npm install --omit=dev --legacy-peer-deps
 
-# Copia o restante da aplicação
+# garante diretório de logs que será montado como volume
+RUN mkdir -p /var/log/sampleapp
+
+# copia código
 COPY . .
 
 ENV APP_PORT=3000
+ENV LOG_DIR=/var/log/sampleapp
+ENV LOG_FILE=/var/log/sampleapp/app.log
+
 CMD ["node", "-r", "./otel.js", "app.js"]
