--- a/elasticsearch/open-observability-unified/promtail/config.yml
+++ b/elasticsearch/open-observability-unified/promtail/config.yml
@@ -9,9 +9,10 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: sampleapp-logs
+  - job_name: sampleapp
     static_configs:
       - targets: [localhost]
         labels:
           job: sampleapp
+          app: sampleapp
           __path__: /var/log/sampleapp/*.log
