--- a/elasticsearch/open-observability-unified/prometheus/prometheus.yml
+++ b/elasticsearch/open-observability-unified/prometheus/prometheus.yml
@@ -2,40 +2,41 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
-rule_files:
-  - /etc/prometheus/rules.yml
-
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-            - alertmanager:9093
-
 scrape_configs:
+  # O próprio Prometheus
   - job_name: prometheus
     static_configs:
-      - targets: ["prometheus:9090"]
+      - targets: ['prometheus:9090']
 
-  - job_name: cadvisor
-    static_configs:
-      - targets: ["cadvisor:8080"]
-
+  # Sua app Node
   - job_name: sampleapp
     metrics_path: /metrics
     static_configs:
-      - targets: ["sampleapp:3000"]
+      - targets: ['sampleapp:3000']
 
+  # Predictor (Flask)
   - job_name: predictor
     metrics_path: /metrics
     static_configs:
-      - targets: ["predictor:8000"]
+      - targets: ['predictor:8000']
 
+  # cAdvisor
+  - job_name: cadvisor
+    static_configs:
+      - targets: ['cadvisor:8080']
+
+  # OTel Collector (telemetria do próprio collector + exporter Prometheus)
   - job_name: otel-collector
+    static_configs:
+      - targets: ['otel-collector:8889', 'otel-collector:9464']
+
+  # Loki e Tempo (métricas internas)
+  - job_name: loki
     metrics_path: /metrics
     static_configs:
-      - targets: ["otel-collector:8888"]
+      - targets: ['loki:3100']
 
   - job_name: tempo
     metrics_path: /metrics
     static_configs:
-      - targets: ["tempo:3200"]
+      - targets: ['tempo:3200']
