--- a/elasticsearch/open-observability-unified/docker-compose.yml
+++ b/elasticsearch/open-observability-unified/docker-compose.yml
@@ -1,5 +1,4 @@
-version: "3.9"
-
+# docker-compose.yml (sem 'version:' para evitar warning)
 networks:
   obs-net:
 
@@ -9,10 +8,10 @@ volumes:
   loki-data:
   tempo-data:
   esdata:
-  kbdata:
   sampleapp-logs:
 
 services:
+  # === Elastic Stack (Logs no ES via Filebeat) ===
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
     container_name: elasticsearch
@@ -25,8 +24,8 @@ services:
       - "9300:9300"
     volumes:
       - esdata:/usr/share/elasticsearch/data
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: unless-stopped
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.12.2
@@ -36,11 +35,23 @@ services:
       - SERVER_PUBLICBASEURL=http://localhost:5601
     ports:
       - "5601:5601"
-    depends_on:
-      - elasticsearch
-    networks:
-      - obs-net
+    depends_on: [elasticsearch]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:8.12.2
+    container_name: filebeat
+    user: root
+    command: ["-e", "-strict.perms=false"]
+    volumes:
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - sampleapp-logs:/var/log/sampleapp:ro
+    depends_on: [elasticsearch, sampleapp]
+    networks: [obs-net]
+    restart: unless-stopped
+
+  # === Prometheus / Alertmanager / Grafana ===
   prometheus:
     image: prom/prometheus:v2.53.0
     container_name: prometheus
@@ -54,8 +65,8 @@ services:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./prometheus/rules.yml:/etc/prometheus/rules.yml:ro
       - prometheus-data:/prometheus
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: unless-stopped
 
   alertmanager:
     image: prom/alertmanager:v0.27.0
@@ -65,8 +76,8 @@ services:
       - "9093:9093"
     volumes:
       - ./alertmanager/config.yml:/etc/alertmanager/config.yml:ro
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: unless-stopped
 
   grafana:
     image: grafana/grafana:11.1.0
@@ -83,14 +94,11 @@ services:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - ./grafana/dashboards:/var/lib/grafana/dashboards
-    depends_on:
-      - prometheus
-      - loki
-      - tempo
-      - elasticsearch
-    networks:
-      - obs-net
+    depends_on: [prometheus, loki, tempo, elasticsearch]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === Loki / Promtail (Logs) ===
   loki:
     image: grafana/loki:2.9.8
     container_name: loki
@@ -100,8 +108,8 @@ services:
     volumes:
       - ./loki/local-config.yaml:/etc/loki/local-config.yaml:ro
       - loki-data:/loki
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: unless-stopped
 
   promtail:
     image: grafana/promtail:2.9.8
@@ -110,76 +118,80 @@ services:
     volumes:
       - ./promtail/config.yml:/etc/promtail/config.yml:ro
       - sampleapp-logs:/var/log/sampleapp:ro
-    depends_on:
-      - loki
-    networks:
-      - obs-net
+    depends_on: [loki]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === Tempo (Traces) com init para permissões do volume ===
   tempo-init:
     image: busybox:1.36
     container_name: tempo-init
     command: sh -c "mkdir -p /tmp/tempo/blocks /tmp/tempo/wal && chmod -R 777 /tmp/tempo"
     volumes:
       - tempo-data:/tmp/tempo
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: "no"
 
   tempo:
     image: grafana/tempo:2.5.0
     container_name: tempo
     command: ["-config.file=/etc/tempo/config.yaml"]
     ports:
-      - "3200:3200"
-      - "4317:4317"
-      - "4318:4318"
+      - "3200:3200"   # http
+      - "4317:4317"   # otlp grpc
+      - "4318:4318"   # otlp http
     volumes:
       - ./tempo/config.yaml:/etc/tempo/config.yaml:ro
       - tempo-data:/tmp/tempo
-    depends_on:
-      - tempo-init
-    networks:
-      - obs-net
+    depends_on: [tempo-init]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === OpenTelemetry Collector (recebe de apps, exporta p/ Tempo/Loki; telemetria na 8889) ===
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.104.0
     container_name: otel-collector
     command: ["--config=/etc/otelcol/config.yaml"]
     ports:
-      - "8889:8889"   # expõe só métricas
+      - "8889:8889"   # telemetria do collector
+      # 4317/4318 ficam internos na rede para apps usarem via nome 'otel-collector'
     volumes:
       - ./otel-collector/config.yaml:/etc/otelcol/config.yaml:ro
-    depends_on:
-      - tempo
-    networks:
-      - obs-net
+    depends_on: [tempo]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === cAdvisor (métricas de containers) ===
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.2
     container_name: cadvisor
     ports:
       - "8080:8080"
-    networks:
-      - obs-net
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === Sample App (Node) com métricas, logs em arquivo e OTEL ===
   sampleapp:
     build: ./sampleapp
     container_name: sampleapp
     environment:
       - SERVICE_NAME=sampleapp
+      - NODE_ENV=production
+      - APP_PORT=3000
+      - LOG_DIR=/var/log/sampleapp
+      - LOG_FILE=/var/log/sampleapp/app.log
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
       - OTEL_SERVICE_NAME=sampleapp
       - OTEL_RESOURCE_ATTRIBUTES=service.version=1.0,deployment.environment=demo
-      - NODE_ENV=production
-      - APP_PORT=3000
     ports:
       - "3001:3000"
     volumes:
       - sampleapp-logs:/var/log/sampleapp
-    depends_on:
-      - otel-collector
-    networks:
-      - obs-net
+    depends_on: [otel-collector]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === Predictor (consulta Prometheus e expõe métricas) ===
   predictor:
     build: ./predictor
     container_name: predictor
@@ -190,32 +202,17 @@ services:
       - POLL_SECONDS=60
     ports:
       - "8000:8000"
-    depends_on:
-      - prometheus
-    networks:
-      - obs-net
+    depends_on: [prometheus]
+    networks: [obs-net]
+    restart: unless-stopped
 
+  # === Load Generator (gera tráfego na sampleapp) ===
   loadgen:
     build:
       context: ./loadgen
     container_name: loadgen
     environment:
       - SLEEP_SECONDS=1
-    depends_on:
-      - sampleapp
-    networks:
-      - obs-net
-
-  filebeat:
-    image: docker.elastic.co/beats/filebeat:8.12.2
-    container_name: filebeat
-    user: root
-    command: ["-e", "-strict.perms=false"]
-    volumes:
-      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - sampleapp-logs:/var/log/sampleapp:ro
-    depends_on:
-      - elasticsearch
-      - sampleapp
-    networks:
-      - obs-net
+    depends_on: [sampleapp]
+    networks: [obs-net]
+    restart: unless-stopped
