--- a/elasticsearch/open-observability-unified/docker-compose.yml
+++ b/elasticsearch/open-observability-unified/docker-compose.yml
@@ -11,7 +11,6 @@ volumes:
   sampleapp-logs:
 
 services:
-  # === Elastic Stack (Logs no ES via Filebeat) ===
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
     container_name: elasticsearch
@@ -19,11 +18,8 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - ES_JAVA_OPTS=-Xms1g -Xmx1g
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
+    ports: ["9200:9200","9300:9300"]
+    volumes: [ esdata:/usr/share/elasticsearch/data ]
     networks: [obs-net]
     restart: unless-stopped
 
@@ -33,8 +29,7 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - SERVER_PUBLICBASEURL=http://localhost:5601
-    ports:
-      - "5601:5601"
+    ports: ["5601:5601"]
     depends_on: [elasticsearch]
     networks: [obs-net]
     restart: unless-stopped
@@ -43,7 +38,7 @@ services:
     image: docker.elastic.co/beats/filebeat:8.12.2
     container_name: filebeat
     user: root
-    command: ["-e", "-strict.perms=false"]
+    command: ["-e","-strict.perms=false"]
     volumes:
       - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
       - sampleapp-logs:/var/log/sampleapp:ro
@@ -51,7 +46,6 @@ services:
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Prometheus / Alertmanager / Grafana ===
   prometheus:
     image: prom/prometheus:v2.53.0
     container_name: prometheus
@@ -59,11 +53,10 @@ services:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--web.enable-lifecycle"
-    ports:
-      - "9090:9090"
+    ports: ["9090:9090"]
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./prometheus/rules.yml:/etc/prometheus/rules.yml:ro
+      - ./prometheus/alert.rules.yml:/etc/prometheus/alert.rules.yml:ro   # << regras montadas
       - prometheus-data:/prometheus
     networks: [obs-net]
     restart: unless-stopped
@@ -72,8 +65,7 @@ services:
     image: prom/alertmanager:v0.27.0
     container_name: alertmanager
     command: ["--config.file=/etc/alertmanager/config.yml"]
-    ports:
-      - "9093:9093"
+    ports: ["9093:9093"]
     volumes:
       - ./alertmanager/config.yml:/etc/alertmanager/config.yml:ro
     networks: [obs-net]
@@ -82,8 +74,7 @@ services:
   grafana:
     image: grafana/grafana:11.1.0
     container_name: grafana
-    ports:
-      - "3000:3000"
+    ports: ["3000:3000"]
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
@@ -98,13 +89,11 @@ services:
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Loki / Promtail (Logs) ===
   loki:
     image: grafana/loki:2.9.8
     container_name: loki
     command: ["-config.file=/etc/loki/local-config.yaml"]
-    ports:
-      - "3100:3100"
+    ports: ["3100:3100"]
     volumes:
       - ./loki/local-config.yaml:/etc/loki/local-config.yaml:ro
       - loki-data:/loki
@@ -122,7 +111,6 @@ services:
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Tempo (Traces) com init para permissões do volume ===
   tempo-init:
     image: busybox:1.36
     container_name: tempo-init
@@ -137,9 +125,9 @@ services:
     container_name: tempo
     command: ["-config.file=/etc/tempo/config.yaml"]
     ports:
-      - "3200:3200"   # http
-      - "4317:4317"   # otlp grpc
-      - "4318:4318"   # otlp http
+      - "3200:3200"
+      - "4317:4317"
+      - "4318:4318"
     volumes:
       - ./tempo/config.yaml:/etc/tempo/config.yaml:ro
       - tempo-data:/tmp/tempo
@@ -147,30 +135,25 @@ services:
     networks: [obs-net]
     restart: unless-stopped
 
-  # === OpenTelemetry Collector (recebe de apps, exporta p/ Tempo/Loki; telemetria na 8889) ===
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.104.0
     container_name: otel-collector
     command: ["--config=/etc/otelcol/config.yaml"]
     ports:
-      - "8889:8889"   # telemetria do collector
-      # 4317/4318 ficam internos na rede para apps usarem via nome 'otel-collector'
+      - "8889:8889"  # telemetry do collector
     volumes:
       - ./otel-collector/config.yaml:/etc/otelcol/config.yaml:ro
     depends_on: [tempo]
     networks: [obs-net]
     restart: unless-stopped
 
-  # === cAdvisor (métricas de containers) ===
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.2
     container_name: cadvisor
-    ports:
-      - "8080:8080"
+    ports: ["8080:8080"]
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Sample App (Node) com métricas, logs em arquivo e OTEL ===
   sampleapp:
     build: ./sampleapp
     container_name: sampleapp
@@ -183,15 +166,13 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
       - OTEL_SERVICE_NAME=sampleapp
       - OTEL_RESOURCE_ATTRIBUTES=service.version=1.0,deployment.environment=demo
-    ports:
-      - "3001:3000"
+    ports: ["3001:3000"]
     volumes:
       - sampleapp-logs:/var/log/sampleapp
     depends_on: [otel-collector]
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Predictor (consulta Prometheus e expõe métricas) ===
   predictor:
     build: ./predictor
     container_name: predictor
@@ -200,13 +181,11 @@ services:
       - TARGET_EXPR=rate(sampleapp_http_requests_total[5m])
       - TARGET_THRESHOLD=50
       - POLL_SECONDS=60
-    ports:
-      - "8000:8000"
+    ports: ["8000:8000"]
     depends_on: [prometheus]
     networks: [obs-net]
     restart: unless-stopped
 
-  # === Load Generator (gera tráfego na sampleapp) ===
   loadgen:
     build:
       context: ./loadgen
