ajustando regra de alerta

--- a/elasticsearch/open-observability-unified/prometheus/alert.rules.yml
+++ b/elasticsearch/open-observability-unified/prometheus/alert.rules.yml
@@ -1,7 +1,6 @@
 groups:
   - name: example-alerts
     rules:
-      # dispara se a sampleapp ficar OFF por 1 minuto
       - alert: SampleAppDown
         expr: up{job="sampleapp"} == 0
         for: 1m
@@ -10,9 +9,8 @@ groups:
           env: production
         annotations:
           summary: "SampleApp indisponível"
-          description: "O alvo sampleapp está DOWN há mais de 1 minuto."
+          description: "sampleapp está DOWN há >1m."
 
-      # dispara se houver erros (rota /error) de forma contínua
       - alert: HighErrorRate
         expr: sum(rate(sampleapp_http_requests_total{route="error"}[1m])) > 0.1
         for: 2m
@@ -21,9 +19,8 @@ groups:
           env: production
         annotations:
           summary: "Taxa de erro elevada"
-          description: "A rota /error está acima de 0.1 rps por >2m."
+          description: "Rota /error > 0.1 rps por >2m."
 
-      # dispara se o predictor parar de expor métricas
       - alert: PredictorDown
         expr: up{job="predictor"} == 0
         for: 1m
@@ -32,4 +29,4 @@ groups:
           env: production
         annotations:
           summary: "Predictor indisponível"
-          description: "O serviço predictor não responde há >1m."
+          description: "predictor está DOWN há >1m."
