--- a/elasticsearch/open-observability-unified/alertmanager/config.yml
+++ b/elasticsearch/open-observability-unified/alertmanager/config.yml
@@ -1,18 +1,17 @@
 route:
   receiver: default
-  group_by: ['alertname', 'job']
+  group_by: ['alertname','job']
   group_wait: 10s
   group_interval: 1m
   repeat_interval: 2h
 
 receivers:
   - name: default
-    # Sem integrações externas por enquanto (somente UI).
-    # Exemplo de webhook (quando quiser testar):
+    # Exemplo de webhook (quando quiser testar integrações):
     # webhook_configs:
     #   - url: "http://webhook:9000/alerts"
 
 inhibit_rules:
   - source_matchers: ['severity="critical"']
     target_matchers: ['severity="warning"']
-    equal: ['alertname', 'job']
+    equal: ['alertname','job']
