--- a/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
+++ b/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
@@ -1,9 +1,12 @@
 FROM alpine:3.19
 
-RUN apk add --no-cache curl jq bash
+# Substitui o mirror padrão para um mais confiável e instala dependências
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/' /etc/apk/repositories && \
+    apk add --no-cache curl jq bash
 
+# Copia o script de seed
 COPY seed_zabbix.sh /seed/seed_zabbix.sh
 
+# Permissões e execução
 RUN chmod +x /seed/seed_zabbix.sh
-
-CMD ["/seed/seed_zabbix.sh"]
+ENTRYPOINT ["bash", "/seed/seed_zabbix.sh"]
