--- a/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
+++ b/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
@@ -1,13 +1,12 @@
-# Imagem base
 FROM alpine:3.19
 
-# Troca o repositório para usar HTTP (evita erros de certificado SSL)
+# Corrige repositório SSL e instala pacotes necessários
 RUN sed -i 's|https://dl-cdn.alpinelinux.org|http://dl-cdn.alpinelinux.org|g' /etc/apk/repositories && \
-    apk add --no-cache curl bash sed
+    apk add --no-cache curl bash sed jq
 
-# Copia o script de seed para dentro do container
+# Copia o script de seed
 COPY seed_zabbix.sh /seed/seed_zabbix.sh
 RUN chmod +x /seed/seed_zabbix.sh
 
-# Define o script como entrypoint
+# Executa o script ao iniciar o container
 ENTRYPOINT ["/seed/seed_zabbix.sh"]
