--- a/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
+++ b/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
@@ -1,12 +1,10 @@
 FROM alpine:3.19
 
-# Corrige repositório SSL e instala pacotes necessários
-RUN sed -i 's|https://dl-cdn.alpinelinux.org|http://dl-cdn.alpinelinux.org|g' /etc/apk/repositories && \
-    apk add --no-cache curl bash sed jq
+# Instala curl, bash e sed
+RUN apk add --no-cache curl bash sed
 
 # Copia o script de seed
 COPY seed_zabbix.sh /seed/seed_zabbix.sh
-RUN chmod +x /seed/seed_zabbix.sh
 
-# Executa o script ao iniciar o container
+# Entrypoint padrão
 ENTRYPOINT ["/seed/seed_zabbix.sh"]
