--- a/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
+++ b/elasticsearch/open-observability-unified/zabbix/seeder/Dockerfile
@@ -1,10 +1,17 @@
-FROM alpine:3.19
+FROM debian:bookworm-slim
 
-# Instala curl, bash e sed
-RUN apk add --no-cache curl bash sed
+# Instala curl, bash e sed com apt
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    curl bash sed ca-certificates && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copia o script de seed
+# Copia o script para dentro do container
 COPY seed_zabbix.sh /seed/seed_zabbix.sh
+
+# Permissão de execução
+RUN chmod +x /seed/seed_zabbix.sh
 
 # Entrypoint padrão
 ENTRYPOINT ["/seed/seed_zabbix.sh"]
