--- a/elasticsearch/open-observability-unified/.env
+++ b/elasticsearch/open-observability-unified/.env
@@ -1,15 +1,6 @@
-# URL da API JSON-RPC do Zabbix Web
 ZBX_URL=http://zabbix-web:8080/api_jsonrpc.php
-
-# Credenciais de login (default do Zabbix)
 ZBX_USER=Admin
 ZBX_PASS=zabbix
-
-# Nome do grupo de hosts que será criado ou reutilizado
-ZBX_GROUP=Sample Group
-
-# Nome exato do template já incluso por padrão no Zabbix
-ZBX_TEMPLATE=Linux by Zabbix agent
-
-# Lista de hosts (IP ou DNS) separados por vírgula
-ZBX_HOSTS=192.168.100.10,192.168.100.11,192.168.100.12
+ZBX_GROUP=GrupoTeste
+ZBX_TEMPLATE=Template OS Linux
+ZBX_HOSTS=10.10.10.1,10.10.10.2
