--- a/elasticsearch/open-observability-unified/docker-compose.yml
+++ b/elasticsearch/open-observability-unified/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: grafana/grafana:11.1.0
+    build: ./grafana
     container_name: grafana
     ports: ["3000:3000"]
     environment:
@@ -81,7 +81,6 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
-      - GF_INSTALL_PLUGINS=alexanderzobnin-zabbix-app   # <-- plugin do Zabbix
     volumes:
       - grafana-data:/var/lib/grafana
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
