--- a/elasticsearch/open-observability-unified/grafana/Dockerfile
+++ b/elasticsearch/open-observability-unified/grafana/Dockerfile
@@ -1,12 +1,11 @@
 FROM grafana/grafana:11.1.0
 
-# Garante que os certificados CA estejam presentes
+# Troca para root para instalar dependências
 USER root
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends ca-certificates curl && \
-    update-ca-certificates && \
-    grafana-cli plugins install alexanderzobnin-zabbix-datasource && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
 
+# Usa apk (Alpine) em vez de apt-get, instala curl e certificados, e adiciona o plugin Zabbix
+RUN apk add --no-cache curl ca-certificates && \
+    grafana-cli plugins install alexanderzobnin-zabbix-app
+
+# Retorna ao usuário padrão grafana
 USER grafana
