--- a/elasticsearch/open-observability-unified/grafana/Dockerfile
+++ b/elasticsearch/open-observability-unified/grafana/Dockerfile
@@ -1,11 +1,14 @@
 FROM grafana/grafana:11.1.0
 
-# Troca para root para instalar dependências
 USER root
 
-# Usa apk (Alpine) em vez de apt-get, instala curl e certificados, e adiciona o plugin Zabbix
-RUN apk add --no-cache curl ca-certificates && \
-    grafana-cli plugins install alexanderzobnin-zabbix-app
+# Instala unzip e certificados necessários
+RUN apk add --no-cache ca-certificates unzip && update-ca-certificates
 
-# Retorna ao usuário padrão grafana
+# Copia e instala o plugin manualmente
+COPY plugins/alexanderzobnin-zabbix-app.zip /tmp/zabbix.zip
+RUN mkdir -p /var/lib/grafana/plugins/zabbix && \
+    unzip /tmp/zabbix.zip -d /var/lib/grafana/plugins/zabbix && \
+    rm /tmp/zabbix.zip
+
 USER grafana
