--- a/elasticsearch/open-observability-unified/grafana/Dockerfile
+++ b/elasticsearch/open-observability-unified/grafana/Dockerfile
@@ -2,13 +2,7 @@ FROM grafana/grafana:11.1.0
 
 USER root
 
-# Instala unzip e certificados necessários
-RUN apk add --no-cache ca-certificates unzip && update-ca-certificates
-
-# Copia e instala o plugin manualmente
-COPY plugins/alexanderzobnin-zabbix-app.zip /tmp/zabbix.zip
-RUN mkdir -p /var/lib/grafana/plugins/zabbix && \
-    unzip /tmp/zabbix.zip -d /var/lib/grafana/plugins/zabbix && \
-    rm /tmp/zabbix.zip
+# Copia o plugin já descompactado no host
+COPY zabbix /var/lib/grafana/plugins/zabbix
 
 USER grafana
