--- a/elasticsearch/open-observability-unified/grafana/Dockerfile
+++ b/elasticsearch/open-observability-unified/grafana/Dockerfile
@@ -2,7 +2,8 @@ FROM grafana/grafana:11.1.0
 
 USER root
 
-# Copia o plugin já descompactado no host
-COPY zabbix /var/lib/grafana/plugins/zabbix
+# Copia o plugin descompactado (dentro de grafana/zabbix/alexanderzobnin-zabbix-app) para o local correto do Grafana
+COPY zabbix/alexanderzobnin-zabbix-app /var/lib/grafana/plugins/alexanderzobnin-zabbix-app
 
 USER grafana
+
