--- a/elasticsearch/observabilidade-experiencia-negocio/docker-compose.yml
+++ b/elasticsearch/observabilidade-experiencia-negocio/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - elasticsearch
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - KIBANA_SERVICE_ACCOUNT_TOKEN=${KIBANA_SERVICE_ACCOUNT_TOKEN}
+      - KIBANA_SERVICE_ACCOUNT_TOKEN="${KIBANA_SERVICE_ACCOUNT_TOKEN}"
     ports:
       - "5601:5601"
 
