--- a/elasticsearch/buscador-elastic-noauth-v1/api/Dockerfile
+++ b/elasticsearch/buscador-elastic-noauth-v1/api/Dockerfile
@@ -1,11 +1,16 @@
 FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y --no-install-recommends         build-essential git && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential git && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY api/requirements.txt /app/requirements.txt
+
+# Como o contexto de build é ./api, os arquivos já estão na raiz do contexto
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
-COPY api /app
+
+# Copia TODO o conteúdo da pasta api
+COPY . /app
 
 EXPOSE 8000
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
