--- a/elasticsearch/buscador-elastic-noauth-v1/ui/Dockerfile
+++ b/elasticsearch/buscador-elastic-noauth-v1/ui/Dockerfile
@@ -1,7 +1,11 @@
 FROM python:3.11-slim
+
 WORKDIR /app
-COPY ui/requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
-COPY ui /app
+
+# Como o contexto de build é ./ui, copie tudo
+COPY . /app
+
 EXPOSE 8501
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
