--- a/elasticsearch/buscador-elastic-noauth-v1/ui/Dockerfile
+++ b/elasticsearch/buscador-elastic-noauth-v1/ui/Dockerfile
@@ -2,10 +2,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Como o contexto de build é ./ui, copie tudo
+# ▼ adiciona trusted-host para contornar o SSL MITM
+RUN pip install --no-cache-dir --default-timeout=120 \
+    --trusted-host pypi.org --trusted-host files.pythonhosted.org \
+    -r /app/requirements.txt
+
 COPY . /app
-
 EXPOSE 8501
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
